# pypssh

./: .gitignore  LICENSE  README.md  README_zh-CN.md  TODO.md  inventory.conf  pyproject.toml  pypssh.py  pypssh.spec  readme.md  requirement-dev.txt  requirement.txt  setup.py
.github/workflows/: pypsshci.yml  pythonpublish.yml
config/: inventory.yaml  load.conf  old_inventory.conf
pypssh/: __init__.py  cli.py  main.py
pypssh/commands/: __init__.py  config.py  execute.py  file.py  ping.py  version.py
pypssh/config/: crypto.py  storage.py
pypssh/core/: connectivity.py  executor.py  models.py  transfer.py
pypssh/selector/: ip_selector.py  label_selector.py
pypssh/tests/: test_ip_selector.py  test_label_selector.py
pypssh/ui/: formatter.py  progress.py
test/: README.md  test.sh
test/sshd_service/: chpasswd.sh  docker-compose.yaml  qos.sh  test.sh
tests/: README.md
tests/benchmarks/: mock_sshd.py  performance_test.py
